# oapi-codegen

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json
cmd/oapi-codegen/: BUILD.bazel  oapi-codegen.go  oapi-codegen_test.go
examples/authenticated-api/: README.md
examples/authenticated-api/echo/: BUILD.bazel  main.go
examples/authenticated-api/echo/api/: BUILD.bazel  api.gen.go  doc.go
examples/authenticated-api/echo/server/: BUILD.bazel  fake_jws.go  server.go  server_test.go
examples/petstore-expanded/: BUILD.bazel  petstore-client.gen.go
examples/petstore-expanded/chi/: BUILD.bazel  petstore.go  petstore_test.go
examples/petstore-expanded/chi/api/: BUILD.bazel  petstore.gen.go  petstore.go
examples/petstore-expanded/echo/: BUILD.bazel  petstore.go  petstore_test.go
examples/petstore-expanded/echo/api/: BUILD.bazel  petstore-server.gen.go  petstore.go  server.cfg.yaml
examples/petstore-expanded/echo/api/models/: BUILD.bazel  models.gen.go
examples/petstore-expanded/gin/: BUILD.bazel  petstore.go  petstore_test.go
examples/petstore-expanded/gin/api/: BUILD.bazel  petstore-server.gen.go  petstore-types.gen.go  petstore.go
examples/petstore-expanded/gorilla/: BUILD.bazel  petstore.go  petstore_test.go
examples/petstore-expanded/gorilla/api/: BUILD.bazel  petstore.gen.go
examples/petstore-expanded/internal/: BUILD.bazel  doc.go
examples/petstore-expanded/strict/: BUILD.bazel  petstore.go  petstore_test.go
examples/petstore-expanded/strict/api/: BUILD.bazel  petstore-server.gen.go  petstore.go
internal/test/all_of/: BUILD.bazel  doc.go
internal/test/all_of/v1/: BUILD.bazel  openapi.gen.go
internal/test/all_of/v2/: BUILD.bazel  openapi.gen.go
internal/test/client/: BUILD.bazel  client.gen.go  doc.go
internal/test/components/: BUILD.bazel  components.gen.go  doc.go
internal/test/externalref/: BUILD.bazel  doc.go  externalref.cfg.yaml  externalref.gen.go  imports_test.go
internal/test/externalref/packageA/: BUILD.bazel  config.yaml  doc.go  externalref.gen.go
internal/test/externalref/packageB/: BUILD.bazel  doc.go  externalref.gen.go
internal/test/issues/issue-312/: BUILD.bazel  doc.go  issue.gen.go
internal/test/issues/issue-52/: BUILD.bazel  doc.go  issue.gen.go  issue_test.go
internal/test/issues/issue-579/: BUILD.bazel  gen.go  issue.gen.go
internal/test/issues/issue-grab_import_names/: BUILD.bazel  doc.go  issue.gen.go  issue_test.go
internal/test/issues/issue-head-digit-of-httpheader/: BUILD.bazel  doc.go  issue.gen.go
internal/test/issues/issue-illegal_enum_names/: BUILD.bazel  doc.go  issue.gen.go  issue_test.go
internal/test/parameters/: BUILD.bazel  doc.go  parameters.gen.go  parameters_test.go
internal/test/schemas/: BUILD.bazel  doc.go  schemas.gen.go
internal/test/server/: BUILD.bazel  doc.go  server.gen.go
internal/test/strict-server/: BUILD.bazel  strict_test.go
internal/test/strict-server/chi/: BUILD.bazel  server.gen.go
internal/test/strict-server/client/: BUILD.bazel  client.gen.go  client.go
internal/test/strict-server/echo/: BUILD.bazel  server.gen.go
internal/test/strict-server/gin/: BUILD.bazel  server.gen.go  server.go  types.gen.go
pkg/chi-middleware/: BUILD.bazel  oapi_validate_test.go
pkg/codegen/: BUILD.bazel  codegen_test.go  configuration.go  operations.go  template_helpers.go
pkg/codegen/templates/: imports.tmpl
pkg/ecdsafile/: BUILD.bazel
pkg/gin-middleware/: BUILD.bazel  oapi_validate_test.go
pkg/middleware/: BUILD.bazel  oapi_validate_test.go
pkg/runtime/: BUILD.bazel  bindform.go  bindform_test.go  bindparam.go  bindparam_test.go  bindstring.go  bindstring_test.go  deepobject.go  styleparam.go  styleparam_test.go
pkg/securityprovider/: BUILD.bazel  securityprovider_test.go
pkg/testutil/: BUILD.bazel
pkg/types/: BUILD.bazel
pkg/util/: BUILD.bazel
