load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/sgnl-ai/oapi-codegen
# gazelle:repository_macro deps.bzl%defName
# gazelle:proto disable_global

gazelle(
    name = "gazelle",
    command = "update",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)
