load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "oapi-codegen_lib",
    srcs = ["oapi-codegen.go"],
    importpath = "github.com/sgnl-ai/sgnl/cmd/oapi-codegen",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_deepmap_oapi_codegen//pkg/codegen:go_default_library",
        "@com_github_deepmap_oapi_codegen//pkg/util:go_default_library",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_binary(
    name = "oapi-codegen",
    embed = [":oapi-codegen_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "oapi-codegen_test",
    srcs = ["oapi-codegen_test.go"],
    embed = [":oapi-codegen_lib"],
    deps = ["@com_github_deepmap_oapi_codegen//pkg/util:go_default_library"],
)
