load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "codegen",
    srcs = [
        "codegen.go",
        "configuration.go",
        "extension.go",
        "filter.go",
        "inline.go",
        "merge_schemas.go",
        "merge_schemas_v1.go",
        "operations.go",
        "prune.go",
        "schema.go",
        "template_helpers.go",
        "utils.go",
    ],
    embedsrcs = [
        "templates/additional-properties.tmpl",
        "templates/chi/chi-handler.tmpl",
        "templates/chi/chi-interface.tmpl",
        "templates/chi/chi-middleware.tmpl",
        "templates/client-with-responses.tmpl",
        "templates/client.tmpl",
        "templates/constants.tmpl",
        "templates/echo/echo-interface.tmpl",
        "templates/echo/echo-register.tmpl",
        "templates/echo/echo-wrappers.tmpl",
        "templates/gin/gin-interface.tmpl",
        "templates/gin/gin-register.tmpl",
        "templates/gin/gin-wrappers.tmpl",
        "templates/imports.tmpl",
        "templates/inline.tmpl",
        "templates/param-types.tmpl",
        "templates/request-bodies.tmpl",
        "templates/typedef.tmpl",
    ],
    importpath = "github.com/sgnl-ai/oapi-codegen/pkg/codegen",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_labstack_echo_v4//:echo",
        "@org_golang_x_tools//imports",
    ],
)

go_test(
    name = "codegen_test",
    srcs = [
        "codegen_test.go",
        "extension_test.go",
        "filter_test.go",
        "operations_test.go",
        "prune_test.go",
        "utils_test.go",
    ],
    embed = [":codegen"],
    embedsrcs = ["test_spec.yaml"],
    deps = [
        "//examples/petstore-expanded",
        "//examples/petstore-expanded/echo/api",
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_golangci_lint_1//:lint-1",
        "@com_github_stretchr_testify//assert",
    ],
)
