load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gin-middleware",
    srcs = ["oapi_validate.go"],
    importpath = "github.com/sgnl-ai/sgnl/pkg/gin-middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_getkin_kin_openapi//openapi3filter",
        "@com_github_getkin_kin_openapi//routers",
        "@com_github_getkin_kin_openapi//routers/gorillamux",
        "@com_github_gin_gonic_gin//:gin",
    ],
)

go_test(
    name = "gin-middleware_test",
    srcs = ["oapi_validate_test.go"],
    embed = [":gin-middleware"],
    embedsrcs = ["test_spec.yaml"],
    deps = [
        "@com_github_deepmap_oapi_codegen//pkg/testutil:go_default_library",
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_getkin_kin_openapi//openapi3filter",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
