load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "middleware",
    srcs = ["oapi_validate.go"],
    importpath = "github.com/sgnl-ai/oapi-codegen/pkg/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_getkin_kin_openapi//openapi3filter",
        "@com_github_getkin_kin_openapi//routers",
        "@com_github_getkin_kin_openapi//routers/gorillamux",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_test(
    name = "middleware_test",
    srcs = ["oapi_validate_test.go"],
    embed = [":middleware"],
    embedsrcs = ["test_spec.yaml"],
    deps = [
        "//pkg/testutil",
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_getkin_kin_openapi//openapi3filter",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
