load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runtime",
    srcs = [
        "bind.go",
        "bindform.go",
        "bindparam.go",
        "bindstring.go",
        "deepobject.go",
        "jsonmerge.go",
        "styleparam.go",
    ],
    importpath = "github.com/sgnl-ai/oapi-codegen/pkg/runtime",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/types",
        "@com_github_apapsch_go_jsonmerge_v2//:go-jsonmerge",
    ],
)

go_test(
    name = "runtime_test",
    srcs = [
        "bindform_test.go",
        "bindparam_test.go",
        "bindstring_test.go",
        "deepobject_test.go",
        "jsonmerge_test.go",
        "styleparam_test.go",
    ],
    embed = [":runtime"],
    deps = [
        "//pkg/types",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
