load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "securityprovider",
    srcs = ["securityprovider.go"],
    importpath = "github.com/sgnl-ai/sgnl/pkg/securityprovider",
    visibility = ["//visibility:public"],
)

go_test(
    name = "securityprovider_test",
    srcs = ["securityprovider_test.go"],
    embed = [":securityprovider"],
    deps = [
        "@com_github_deepmap_oapi_codegen//internal/test/client:go_default_library",
        "@com_github_stretchr_testify//assert",
    ],
)
