load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "echo_lib",
    srcs = ["petstore.go"],
    importpath = "github.com/sgnl-ai/sgnl/examples/petstore-expanded/echo",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_deepmap_oapi_codegen//examples/petstore-expanded/echo/api:go_default_library",
        "@com_github_deepmap_oapi_codegen//pkg/middleware:go_default_library",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
    ],
)

go_binary(
    name = "echo",
    embed = [":echo_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "echo_test",
    srcs = ["petstore_test.go"],
    embed = [":echo_lib"],
    deps = [
        "@com_github_deepmap_oapi_codegen//examples/petstore-expanded/echo/api:go_default_library",
        "@com_github_deepmap_oapi_codegen//pkg/middleware:go_default_library",
        "@com_github_deepmap_oapi_codegen//pkg/testutil:go_default_library",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
