load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gorilla_lib",
    srcs = ["petstore.go"],
    importpath = "github.com/sgnl-ai/oapi-codegen/examples/petstore-expanded/gorilla",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/petstore-expanded/gorilla/api",
        "//pkg/chi-middleware",
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "gorilla",
    embed = [":gorilla_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gorilla_test",
    srcs = ["petstore_test.go"],
    embed = [":gorilla_lib"],
    deps = [
        "//examples/petstore-expanded/gorilla/api",
        "//pkg/chi-middleware",
        "//pkg/testutil",
        "@com_github_gorilla_mux//:mux",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
