load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "components",
    srcs = [
        "components.gen.go",
        "doc.go",
    ],
    importpath = "github.com/sgnl-ai/oapi-codegen/internal/test/components",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_getkin_kin_openapi//openapi3"],
)

go_test(
    name = "components_test",
    srcs = ["components_test.go"],
    embed = [":components"],
    deps = ["@com_github_stretchr_testify//assert"],
)
