load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "externalref",
    srcs = [
        "doc.go",
        "externalref.gen.go",
    ],
    importpath = "github.com/sgnl-ai/sgnl/internal/test/externalref",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_deepmap_oapi_codegen//internal/test/externalref/packageA:go_default_library",
        "@com_github_deepmap_oapi_codegen//internal/test/externalref/packageB:go_default_library",
        "@com_github_getkin_kin_openapi//openapi3",
    ],
)

go_test(
    name = "externalref_test",
    srcs = ["imports_test.go"],
    embed = [":externalref"],
    deps = [
        "@com_github_deepmap_oapi_codegen//internal/test/externalref/packageA:go_default_library",
        "@com_github_deepmap_oapi_codegen//internal/test/externalref/packageB:go_default_library",
        "@com_github_stretchr_testify//require",
    ],
)
