load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parameters",
    srcs = [
        "doc.go",
        "parameters.gen.go",
    ],
    importpath = "github.com/sgnl-ai/sgnl/internal/test/parameters",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_deepmap_oapi_codegen//pkg/runtime:go_default_library",
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_labstack_echo_v4//:echo",
    ],
)

go_test(
    name = "parameters_test",
    srcs = ["parameters_test.go"],
    embed = [":parameters"],
    deps = [
        "@com_github_deepmap_oapi_codegen//pkg/testutil:go_default_library",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
