load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "schemas",
    srcs = [
        "doc.go",
        "schemas.gen.go",
    ],
    importpath = "github.com/sgnl-ai/oapi-codegen/internal/test/schemas",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/runtime",
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_labstack_echo_v4//:echo",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
