load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "doc.go",
        "server.gen.go",
        "server_moq.gen.go",
    ],
    importpath = "github.com/sgnl-ai/sgnl/internal/test/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_deepmap_oapi_codegen//pkg/runtime:go_default_library",
        "@com_github_deepmap_oapi_codegen//pkg/types:go_default_library",
        "@com_github_go_chi_chi_v5//:chi",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
    deps = ["@com_github_stretchr_testify//assert"],
)
