load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "api.gen.go",
        "doc.go",
    ],
    importpath = "github.com/sgnl-ai/sgnl/examples/authenticated-api/echo/api",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_labstack_echo_v4//:echo",
    ],
)
