load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "fake_jws.go",
        "jwt_authenticator.go",
        "server.go",
    ],
    importpath = "github.com/sgnl-ai/oapi-codegen/examples/authenticated-api/echo/server",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/authenticated-api/echo/api",
        "//pkg/ecdsafile",
        "//pkg/middleware",
        "@com_github_getkin_kin_openapi//openapi3filter",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_lestrrat_go_jwx//jwa",
        "@com_github_lestrrat_go_jwx//jwk",
        "@com_github_lestrrat_go_jwx//jws",
        "@com_github_lestrrat_go_jwx//jwt",
    ],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    embed = [":server"],
    deps = [
        "//examples/authenticated-api/echo/api",
        "//pkg/testutil",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
