load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "api",
    srcs = [
        "petstore.go",
        "petstore-server.gen.go",
    ],
    importpath = "github.com/sgnl-ai/oapi-codegen/examples/petstore-expanded/echo/api",
    visibility = ["//visibility:public"],
    deps = [
        "//examples/petstore-expanded/echo/api/models",
        "//pkg/runtime",
        "@com_github_getkin_kin_openapi//openapi3",
        "@com_github_labstack_echo_v4//:echo",
    ],
)
